--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -19,7 +19,7 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
-CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
+# CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
 
 
 # normally use the below
