--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -5,8 +5,8 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
 
-CONFIG_ZMK_MOUSE_TICK_DURATION=8
-CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
+# CONFIG_ZMK_MOUSE_TICK_DURATION=8
+# CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0 
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3 
