--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -1,5 +1,4 @@
 # Put configuration options here
-# Put configuration options here
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_MOUSE=y
@@ -19,15 +18,14 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-# CONFIG_ZMK_SLEEP=y
-# CONFIG_ZMK_IDLE_TIMEOUT=300000
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=300000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
 
 
 # normally use the below
-#CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 #CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
 #CONFIG_ZMK_HID_KEYBOARD_REPORT_SIZE=10
 
