--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -23,7 +23,8 @@ CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
-
+CONFIG_PINCTRL=y
+CONFIG_NRFX_QDEC=y
 
 # normally use the below
 #CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
