--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -1,8 +1,11 @@
 # Put configuration options here
-CONFIG_EC11=n
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
+
+# CONFIG_PINCTRL=y
+# CONFIG_NRFX_QDEC=y
 
 # CONFIG_ZMK_MOUSE_TICK_DURATION=8
 # CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
@@ -23,8 +26,6 @@ CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
-CONFIG_PINCTRL=y
-CONFIG_NRFX_QDEC=y
 
 # normally use the below
 #CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
