--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -21,9 +21,9 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=300000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+# CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_IDLE_TIMEOUT=300000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
 
