--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -16,18 +16,23 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=Y
 CONFIG_WS2812_STRIP=y
 
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# Enable deep sleep support    
 CONFIG_ZMK_SLEEP=y
+# Milliseconds of inactivity before entering idle state    (5 minute)
 CONFIG_ZMK_IDLE_TIMEOUT=300000
+# Milliseconds of inactivity before entering deep sleep (15 minutes)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=4
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=14
-CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=5
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=4
 
 # normally use the below
 #CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
