--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -19,6 +19,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=Y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
