--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,16 @@
 manifest:
   remotes:
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
     - name: urob
       url-base: https://github.com/urob
   projects:
     - name: zmk
       remote: urob
-      revision: main-with-native-mouse
+      revision: main
       import: app/west.yml
+    - name: zmk-helpers
+      remote: urob
+      revision: v2
   self:
     path: config
