--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -17,7 +17,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=Y
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=Y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
