--- a/build.yaml
+++ b/build.yaml
@@ -11,8 +11,9 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
-
-- board: nice_nano_v2
-  shield: micro
-- board: nice_nano_v2
-  shield: settings_reset
+---
+include:
+  - board: nice_nano_v2
+    shield: micro
+  - board: nice_nano_v2
+    shield: settings_reset
