--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -32,6 +32,9 @@ CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=4
+# 13 8s
+
+# CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=4
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=13
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=5
 
