--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -21,6 +21,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
+
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
@@ -34,7 +37,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=4
 
 # CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=4
-CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=15
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=14
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=5
 
 # normally use the below
