--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -6,6 +6,7 @@ CONFIG_USB_HID_POLL_INTERVAL_MS=1
 
 CONFIG_PINCTRL=y
 CONFIG_NRFX_QDEC=y
+CONFIG_ANALOG_INPUT=y
 
 # CONFIG_ZMK_MOUSE_TICK_DURATION=8
 # CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
