--- a/config/boards/shields/micro/micro.conf
+++ b/config/boards/shields/micro/micro.conf
@@ -48,5 +48,5 @@ CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=5
 # CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-# normally use CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM
+# normally use CONFIG_ßZMK_DISPLAY_WORK_QUEUE_SYSTEM
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y 
